<resources>
    <string name="app_name">Scrypto</string>
    <string name="returns">Returns</string>
    <string name="_1_day">1 Day</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_month">1 month</string>
    <string name="dummy_percentage_value">12%</string>
    <string name="last_synced">Last Synced:</string>
    <string name="dummy_time">null</string>
    <string name="error_message">Problem loading Data</string>
    <string name="_3_months">3 Months</string>
    <string name="dummy_coin_name">Bitcoin</string>
    <string name="dummy_price">$123456</string>
</resources>